# lida

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml  dockerfile  pyproject.toml
docs/: MIGRATION.md  llm_rewrite_report.md
lida/: __init__.py  cli.py  datamodel.py
lida/components/: goal.py  manager.py  persona.py  summarizer.py
lida/components/viz/: vizeditor.py  vizevaluator.py  vizexplainer.py  vizgenerator.py  vizrecommender.py  vizrepairer.py
lida/llm/: __init__.py  anthropic_textgen.py  base_textgen.py  datamodel.py  factory.py  gemini_textgen.py  minimax_textgen.py  openai_textgen.py  utils.py
lida/web/: app.py
lida/web/ui/: index.html
lida/web/ui/demo/: index.html
lida/web/ui/login/: index.html
notebooks/: tutorial.ipynb
tests/: test_components.py
tools/: convert.py
